bug 221024 : add a new option for turning invisible chars. to 'nothingness' to the transliterator (r=smontagu, sr=rbs)