gfx/src/gtk/nsFontMetricsGTK.cpp
@@ -2828,7 +2828,8 @@ nsFontGTKSubstitute::Convert(const PRUnichar* aSrc, PRUint32 aSrcLen,
     if (gFontSubConverter) {
       res = gFontSubConverter->Init("ISO-8859-1",
                              nsISaveAsCharset::attr_FallbackQuestionMark +
-                               nsISaveAsCharset::attr_EntityAfterCharsetConv,
+                               nsISaveAsCharset::attr_EntityAfterCharsetConv +
+                               nsISaveAsCharset::attr_IgnoreIgnorables, 
                              nsIEntityConverter::transliterate);
       if (NS_FAILED(res)) {
         NS_RELEASE(gFontSubConverter);
