intl/unicharutil/src/nsSaveAsCharset.cpp
@@ -46,12 +46,20 @@
 #include "nsSaveAsCharset.h"
 #include "nsCRT.h"
 #include "nsUnicharUtils.h"
+#include "nsCompressedCharMap.h"
 
 //
 // nsISupports methods
 //
 NS_IMPL_ISUPPORTS1(nsSaveAsCharset, nsISaveAsCharset)
 
+const static PRUint16 gIgnorableCCMapExtRaw[] =
+{
+#include "ignorables_abjadpoints.x-ccmap"
+};
+
+// 1st Two elements of ext. ccmap need to have negative indices.
+const static PRUint16 *gIgnorableCCMapExt = gIgnorableCCMapExtRaw + 2; 
 
 //
 // nsSaveAsCharset
@@ -257,6 +265,11 @@ nsSaveAsCharset::DoCharsetConversion(const PRUnichar *inString, char **outString
       } else {
         unMappedChar = inString[pos1-1];
       }
+
+      // if we're asked to ignore default ignorable code points, skip them.
+      if (MASK_IGNORABLE_FALLBACK(mAttribute) &&
+          CCMAP_HAS_CHAR_EXT(gIgnorableCCMapExt, unMappedChar)) 
+				continue;
 
       rv = mEncoder->GetMaxLength(inString+pos1, inStringLength-pos1, &dstLength);
       if (NS_FAILED(rv)) 
