intl/unicharutil/src/nsSaveAsCharset.h
@@ -46,6 +46,7 @@
 #define MASK_FALLBACK(a) (nsISaveAsCharset::mask_Fallback & (a))
 #define MASK_ENTITY(a) (nsISaveAsCharset::mask_Entity & (a))
 #define MASK_CHARSET_FALLBACK(a) (nsISaveAsCharset::mask_CharsetFallback & (a))
+#define MASK_IGNORABLE_FALLBACK(a) (nsISaveAsCharset::mask_IgnorableFallback & (a))
 #define ATTR_NO_FALLBACK(a) (nsISaveAsCharset::attr_FallbackNone == MASK_FALLBACK(a) && \
                              nsISaveAsCharset::attr_EntityAfterCharsetConv != MASK_ENTITY(a))
 
@@ -73,12 +74,13 @@ public:
   NS_IMETHOD Init(const char *charset, PRUint32 attr, PRUint32 entityVersion);
 
   NS_IMETHOD Convert(const PRUnichar *inString, char **_retval);
+  NS_IMETHOD Convert2(const PRUnichar *inString, PRUint32* outLen, char **_retval);
 
   NS_IMETHODIMP GetCharset(char * *aCharset);
 
 protected:
 
-  NS_IMETHOD DoCharsetConversion(const PRUnichar *inString, char **outString);
+  NS_IMETHOD DoCharsetConversion(const PRUnichar *inString, PRUint32* outLen, char **outString);
 
   NS_IMETHOD DoConversionFallBack(PRUint32 inUCS4, char *outString, PRInt32 bufferLength);
 
